name:                bmath
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/bmath#readme
license:             BSD3
license-file:        LICENSE
author:              Rasmus Danielsson
maintainer:          example@example.com
copyright:           2023 Rasmus Danielsson
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     CHANGELOG.md

executable bmath
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
  other-modules:       Lexer, Parser
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
